# HRDA

./: pyproject.toml  requirements.txt
configs/_base_/datasets/: uda_prosperoHR_to_weedsHR_1024x1024.py
configs/hrda/: prosperoHR2weedsHR_hrda.py
mmseg/datasets/: __init__.py  prospero.py  weeds.py
tools/convert_datasets/: prospero.py
